<resources>
    <string name="app_name">百合会</string>

    <string name="action_settings">设置</string>
    <string name="network_error_hint">网络连接失败，点击以重试</string>

    <string name="title_activity_thread">帖子详情</string>
    <string name="title_activity_sector">版块</string>
    <string name="title_activity_image_browser">图片浏览</string>
    <string name="title_activity_login">登录</string>

    <string name="prompt_username">用户名</string>
    <string name="prompt_password">密码</string>
    <string name="action_sign_in">登录</string>
    <string name="error_incorrect_password">用户名或密码错误</string>
    <string name="error_username_required">请填写用户名</string>
    <string name="error_password_required">请填写密码</string>
    <string name="login_success">登录成功</string>

    <string name="nav_drawer_open">开启侧边栏</string>
    <string name="nav_drawer_close">关闭侧边栏</string>
    <string name="nav_header_username_hint">点击头像以登录</string>
    <string name="nav_menu_home">首页</string>
    <string name="nav_menu_sector">帖子</string>
    <string name="nav_menu_message">消息</string>
    <string name="nav_menu_favorite">收藏</string>>
    <string name="nav_menu_history">历史</string>
    <string name="nav_menu_settings">设置</string>
    <string name="nav_menu_logout">登出</string>

    <string name="reply_edit_hint">回复</string>

    <string name="image_loading_hint">图片加载中…</string>>
    <string name="image_load_fail_hint">图片加载失败</string>
    <string name="image_op_menu_title">选择操作</string>
    <string-array name="image_op_menu_options">
        <item>保存图片</item>
        <item>分享图片</item>
    </string-array>

    <string name="title_activity_profile">个人资料</string>
    <string name="profile_tab_info">个人资料</string>
    <string name="profile_tab_post">主题</string>
    <string name="profile_tab_reply">回复</string>

    <string name="title_menu_search">搜索</string>
    <string name="title_menu_link">复制链接</string>
    <string name="title_menu_page">跳转到页面</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="message_tab_mail">消息</string>
    <string name="message_tab_reply">我的帖子</string>
    <string name="title_activity_search">搜索</string>
    <string name="title_activity_private_message">私信</string>
    <string name="title_menu_author_only">只看作者</string>
</resources>
